# glob

./: README.md  fnmatch.c  fnmatch.h  glob.c  glob.h  meson.build
